# archscan

./: .gitignore  AGENTS.md  ARCHSCAN.md  README.md  docker-compose.yml
.agents/rules/: validation.md
.claude/rules/: identity.md
backend/: Dockerfile  pyproject.toml
backend/archscan/agents/: __init__.py
backend/archscan/api/: main.py
backend/archscan/discovery/: base.py  generic.py
backend/archscan/model/: __init__.py
backend/archscan/orchestrator/: __init__.py
backend/archscan/steps/: build.py  collect.py  detect_stack.py  render.py  validate.py
docs/specs/: fase-0-estrutura-base.md
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
